tests/ui/super-at-top-level.stderr
error[E0433]: cannot find module `super` in this scope
  --> $DIR/super-at-top-level.rs:1:5
   |
LL | use super::f;
   |     ^^^^^ can't use `super` on the crate root, there are no further modules to go "up" to

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
