tests/ui/super-at-top-level.rs
use super::f; //~ ERROR cannot find module `super` in this scope
//~^ NOTE can't use `super` on the crate root, there are no further modules to go "up" to

fn main() {
}
